--- a/tweezers/plot/SegmentSelectorUi.ui
+++ b/tweezers/plot/SegmentSelectorUi.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>988</width>
-    <height>523</height>
+    <width>1024</width>
+    <height>629</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -131,6 +131,48 @@
          </widget>
         </item>
         <item>
+         <widget class="QGroupBox" name="specialSegmentsGrp">
+          <property name="title">
+           <string>Add as special sgement</string>
+          </property>
+          <property name="flat">
+           <bool>false</bool>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_6">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <layout class="QGridLayout" name="gridLayout">
+             <item row="0" column="1">
+              <widget class="QPushButton" name="saveBslFlatBtn">
+               <property name="text">
+                <string>bslFlat</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QPushButton" name="saveBslBeadsBtn">
+               <property name="text">
+                <string>bslBeads</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="removeSegmentBtn">
           <property name="enabled">
            <bool>false</bool>
@@ -197,6 +239,12 @@
            <string>Plots</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QLabel" name="label_5">
              <property name="text">
@@ -236,6 +284,12 @@
            <string>Data</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QCheckBox" name="groupExportBeadCbx">
              <property name="toolTip">
