--- a/tweezers/plot/SegmentSelectorUi.ui
+++ b/tweezers/plot/SegmentSelectorUi.ui
@@ -275,6 +275,32 @@
            <item>
             <widget class="QComboBox" name="distYAxisCmb"/>
            </item>
+           <item>
+            <widget class="QLabel" name="label_6">
+             <property name="text">
+              <string># of data to average</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="plotAverageDataBx">
+             <property name="toolTip">
+              <string>How many datapoints should be averaged for plotting.</string>
+             </property>
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>100000</number>
+             </property>
+             <property name="singleStep">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>100</number>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
